// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<header
  class="Header"
>
  <h3>
    
  </h3>
  <button
    class="Button"
  >
    + Bounty
  </button>
</header>
`;

exports[`shows title props 1`] = `
<header
  class="Header"
>
  <h3>
    Title
  </h3>
  <button
    class="Button"
  >
    + Bounty
  </button>
</header>
`;
